# RAG-Pipeline

./: .env.example  .gitignore  CHANGELOG.md  CHROMADB_STREAMLIT_FIX.md  QDRANT_CLOUD_SETUP.md  QDRANT_INTEGRATION.md  QDRANT_TEST_RESULTS.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  STREAMLIT_QDRANT_DEPLOYMENT.md  app.cloud.py  app.py  app.streamlit.cloud.py  app.streamlit.py  app.streamlit.qdrant.py  docker-compose.qdrant.yml  docker-compose.weaviate.yml  fix_chromadb_streamlit.py  main.py  migrate_to_qdrant_cloud.py  pyproject.toml  rag.bat  rag.sh  requirements.cloud.txt  requirements.streamlit.cloud.txt  requirements.streamlit.qdrant.txt  requirements.streamlit.txt  requirements.streamlit.windows.txt  requirements.txt  setup.py  setup_qdrant_cloud.py  switch_to_cloud.py  test_qdrant_cloud.py  test_qdrant_comprehensive.py  test_streamlit_init.py  test_vector_db.py  version.bat  version.py
.devcontainer/: devcontainer.json
config/: config.cloud.yaml  config.qdrant.yaml  config.yaml
data/vectors/c2b17812-07fa-4cd8-a73b-3eacc3d7903b/: index_metadata.pickle
docs/: README.md  Streamlit_Hosting.md  Technical_Design_RAGv1.html  Technical_Design_RAGv1.md  ragv1_architecture.mmd  ragv1_architecture_component.mmd  ragv1_dataflow_sequence.mmd  ragv1_extensibility.mmd  ragv1_high_level_architecture.mmd
scripts/: __init__.py  migrate_to_qdrant.py  migrate_to_weaviate.py
src/: __init__.py  rag_pipeline.py
src/ingestion/: __init__.py  document_loader.py
src/utils/: config_loader.py  init_manager.py  log_manager.py  version_manager.py
src/vector_db/: __init__.py  chromadb_client.py  qdrant_client.py  weaviate_client.py
